--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -2,7 +2,9 @@ server.port=9000
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 credit-application-url=http://localhost:9001
-spring.cloud.stream.bindings.input.destination=dogTopic
+spring.cloud.stream.bindings.creditApplicationEnteredIn.destination=CreditApplicationEnteredTopic
+spring.cloud.stream.bindings.creditApplicationEnteredIn.group=CreditApplicationEnteredGroup
+spring.cloud.stream.bindings.creditApplicationEnteredIn.contentType=application/json
+
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.destination=CreditApplicationNumberGeneratedTopic
-spring.cloud.stream.bindings.input.contentType=application/json
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.contentType=application/json
