Finalized Messaging between customer and application-process

--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -5,6 +5,9 @@ credit-application-url=http://localhost:9001
 spring.cloud.stream.bindings.creditApplicationEnteredIn.destination=CreditApplicationEnteredTopic
 spring.cloud.stream.bindings.creditApplicationEnteredIn.group=CreditApplicationEnteredGroup
 spring.cloud.stream.bindings.creditApplicationEnteredIn.contentType=application/json
+spring.cloud.stream.bindings.customerCreatedIn.destination=CustomerCreatedTopic
+spring.cloud.stream.bindings.customerCreatedIn.group=CustomerCreatedGroup
+spring.cloud.stream.bindings.customerCreatedIn.contentType=application/json
 
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.contentType=application/json
