Added Scoring Functionality and integrated it into application-process in terms of events

--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -5,9 +5,16 @@ credit-application-url=http://localhost:9001
 spring.cloud.stream.bindings.creditApplicationEnteredIn.destination=CreditApplicationEnteredTopic
 spring.cloud.stream.bindings.creditApplicationEnteredIn.group=CreditApplicationEnteredGroup
 spring.cloud.stream.bindings.creditApplicationEnteredIn.contentType=application/json
+
 spring.cloud.stream.bindings.customerCreatedIn.destination=CustomerCreatedTopic
 spring.cloud.stream.bindings.customerCreatedIn.group=CustomerCreatedGroup
 spring.cloud.stream.bindings.customerCreatedIn.contentType=application/json
+spring.cloud.stream.bindings.scoringNegativeIn.destination=ScoringNegativeTopic
+spring.cloud.stream.bindings.scoringNegativeIn.group=ScoringNegativeGroup
+spring.cloud.stream.bindings.scoringNegativeIn.contentType=application/json
+spring.cloud.stream.bindings.scoringPositiveIn.destination=ScoringPositiveTopic
+spring.cloud.stream.bindings.scoringPositiveIn.group=ScoringPositiveGroup
+spring.cloud.stream.bindings.scoringPositiveIn.contentType=application/json
 
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.contentType=application/json
