Implemented Credit-Decision feed polling in application-process

--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.cloud.stream.bindings.scoringPositiveIn.contentType=application/json
 
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.contentType=application/json
+logging.level.org.springframework.http.converter.json=ERROR
