reworked routing and made it more generic. removed sql logging

--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=9000
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-credit-application-url=http://localhost:9001
+next-process-step-url=http://localhost:9001/credit-application/
+credit-decision-feed=http://localhost:9004/credit-decision/feed
+
 spring.cloud.stream.bindings.creditApplicationEnteredIn.destination=CreditApplicationEnteredTopic
 spring.cloud.stream.bindings.creditApplicationEnteredIn.group=CreditApplicationEnteredGroup
 spring.cloud.stream.bindings.creditApplicationEnteredIn.contentType=application/json
