--- a/credit-application/src/main/resources/application.properties
+++ b/credit-application/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 server.port=9001
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+next-process-step-url=http://localhost:9002/customer/
+
 spring.cloud.stream.bindings.creditApplicationEnteredOut.destination=CreditApplicationEnteredTopic
 spring.cloud.stream.bindings.creditApplicationEnteredOut.contentType=application/json
 
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.group=CreditApplicationNumberGeneratedGroup
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.contentType=application/json
-customer-url=http://localhost:9002
