--- a/credit-decision/src/main/resources/application.properties
+++ b/credit-decision/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9004
-credit-application-url=http://localhost:9001
+#credit-application-url=http://localhost:9001
+
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.group=CreditDecisionCreditApplicationNumberGeneratedGroup
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.contentType=application/json
