added processing of declined application events in application-process

--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=9000
+
 spring.jpa.hibernate.ddl-auto=update
 next-process-step-url=http://localhost:9001/credit-application/
 credit-decision-feed=http://localhost:9004/credit-decision/feed
@@ -16,6 +17,9 @@ spring.cloud.stream.bindings.scoringNegativeIn.contentType=application/json
 spring.cloud.stream.bindings.scoringPositiveIn.destination=ScoringPositiveTopic
 spring.cloud.stream.bindings.scoringPositiveIn.group=ScoringPositiveGroup
 spring.cloud.stream.bindings.scoringPositiveIn.contentType=application/json
+spring.cloud.stream.bindings.creditApplicationDeclinedIn.destination=ApplicationDeclinedTopic
+spring.cloud.stream.bindings.creditApplicationDeclinedIn.group=ApplicationDeclinedGroup
+spring.cloud.stream.bindings.creditApplicationDeclinedIn.contentType=application/json
 
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedOut.contentType=application/json
