Configuration, Dependencies (MySQL Driver) and Manifests for CloudFoundry Deployment

--- a/application-process/src/main/resources/application.properties
+++ b/application-process/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9000
 
 spring.jpa.hibernate.ddl-auto=update
-next-process-step-url=http://localhost:9001/credit-application/
-credit-decision-feed=http://localhost:9004/credit-decision/feed
+nextProcessStepUrl=http://localhost:9001/credit-application/
+creditDecisionFeed=http://localhost:9004/credit-decision/feed
 
 spring.cloud.stream.bindings.creditApplicationEnteredIn.destination=CreditApplicationEnteredTopic
 spring.cloud.stream.bindings.creditApplicationEnteredIn.group=ApplicationProcess-CreditApplicationEntered-Group
