--- a/customer/src/main/resources/application.properties
+++ b/customer/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=9002
 spring.jpa.hibernate.ddl-auto=update
-next-process-step-url=http://localhost:9000/status/
-route-to-self=http://localhost:9002/
+nextProcessStepUrl=http://localhost:9000/status/
+routeToSelf=http://localhost:9002/
 
 spring.cloud.stream.bindings.customerCreatedOut.destination=CustomerCreatedTopic
 spring.cloud.stream.bindings.customerCreatedOut.contentType=application/json
