MySQL Config Change for CloudFoundry Deployment

--- a/credit-decision/src/main/resources/application.properties
+++ b/credit-decision/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=9004
-
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.destination=CreditApplicationNumberGeneratedTopic
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.group=CreditDecision-CreditApplicationNumberGenerated-Group
 spring.cloud.stream.bindings.creditApplicationNumberGeneratedIn.contentType=application/json
